--- a/Laboratorio_6_CNN.ipynb
+++ b/Laboratorio_6_CNN.ipynb
@@ -28,13 +28,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "NOMBRES:\n",
+        "NOMBRES: Mariel Alejandra\n",
         "\n",
-        "APELLIDOS:\n",
+        "APELLIDOS: Guamuche Recinos\n",
         "\n",
-        "CARNE:\n",
+        "CARNE: 21150\n",
         "\n",
-        "FECHA:"
+        "FECHA: 15/09/2025"
       ],
       "metadata": {
         "id": "zXhjY9dGwJls"
@@ -52,7 +52,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Create a synthetic dataset\n",
+        "data = {\n",
+        "    'title': [\n",
+        "        'Breaking News: Local Election Results Announced',\n",
+        "        'Science Breakthrough: New Material Discovered',\n",
+        "        'Politics: Debate on New Tax Bill',\n",
+        "        'Technology: AI Advancement in Healthcare',\n",
+        "        'Local News: Community Garden Project Starts',\n",
+        "        'Science: Study Shows Climate Change Impact',\n",
+        "        'Politics: Presidential Candidate Speech',\n",
+        "        'Technology: Release of New Smartphone',\n",
+        "        'Local News: School Fair This Weekend',\n",
+        "        'Science: Exploring the Depths of the Ocean'\n",
+        "    ],\n",
+        "    'category': [\n",
+        "        'Politics/Local',\n",
+        "        'Science/Technology',\n",
+        "        'Politics/Local',\n",
+        "        'Science/Technology',\n",
+        "        'Politics/Local',\n",
+        "        'Science/Technology',\n",
+        "        'Politics/Local',\n",
+        "        'Science/Technology',\n",
+        "        'Politics/Local',\n",
+        "        'Science/Technology'\n",
+        "    ],\n",
+        "    'content': [\n",
+        "        'The results of the local elections are in...',\n",
+        "        'Researchers have announced a new material with unique properties...',\n",
+        "        'The debate on the proposed tax bill is underway in Congress...',\n",
+        "        'Artificial intelligence is making significant strides in healthcare applications...',\n",
+        "        'Volunteers gathered today to start building the new community garden...',\n",
+        "        'A new study provides further evidence of climate change...',\n",
+        "        'The presidential candidate delivered a speech outlining their platform...',\n",
+        "        'The latest smartphone model was released today...',\n",
+        "        'The annual school fair is scheduled for this weekend...',\n",
+        "        'A team of scientists is exploring the deepest parts of the ocean...'\n",
+        "    ]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "# Display the dataset\n",
+        "display(df)"
+      ],
       "metadata": {
         "id": "r3aTZXJeiFAI"
       },
